Updated source to version 5.2.1 cloned from https://github.com/thsa/datawarrior